列表展示分页功能确认，插入数据后刷新、列表展示顺序

--- a/View/Login/login.html
+++ b/View/Login/login.html
@@ -183,9 +183,11 @@
               type: "POST",
               url: "http://0.0.0.0:9501/login/login",
               data: {username: username, password: password},
+              headers: {
+                token: 'login'
+              },
               success: function (result) {
                 $.cookie('admin', result.result, {expires: 1, path: '/'});
-                console.log($.cookie('admin'));
                 layer.msg(result.msg, {}, function () {
                   location.href = '../home.html';
                 });
