--- a/View/member/memberList.html
+++ b/View/member/memberList.html
@@ -173,44 +173,46 @@
 <script src="../../Static/js/layui/layui.js" charset="utf-8"></script>
 <script src="../../Static/js/jquery/jquery-3.4.1.min.js" charset="utf-8"></script>
 <script src="../../Static/js/jquery/jquery.cookie.js" charset="utf-8"></script>
+<script src="../../Static/js/common.js" charset="utf-8"></script>
 <script>
   layui.use(['table', 'form', 'element'], function() {
     var table = layui.table;
     var form = layui.form;
     var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
     //-------请求接口，加载会员列表
-    table.render({
-      elem: '#tableId'
-      , url: 'http://0.0.0.0:9501/Member/index'
-      , parseData: function (res) {
-        return {
-          code: 0,
-          msg: res.msg,
-          count: res.result.count,
-          data: res.result.data
-        };
-      }
-      ,headers:{
-        // 'token': 123
-      }
-      , cols: [[
-        {field: 'id', title: 'ID', width:45,align: 'center'}
-        , {field: 'name', title: '姓名', align: 'center'}
-        , {field: 'sex_txt', title: '性别', width:60,align: 'center'}
-        , {field: 'phone', title: '手机号', width: 100, align: 'center'}
-        , {field: 'status_txt', title: '状态', width: 60,align: 'center'}
-        , {field: 'balance', title: '余额', align: 'center'}
-        , {field: 'member_level_txt', title: '会员等级',width: 100, align: 'center'}
-        , {field: 'know_space_txt', title: '了解渠道', width: 100,align: 'center'}
-        , {field: 'introduction', title: '备注',width: 60, align: 'center'}
-        , {field: 'create_staff', title: '创建人', align: 'center'}
-        , {field: 'update_staff', title: '更新人', align: 'center'}
-        , {field: 'create_time', title: '创建时间', width: 163, align: 'center'}
-        , {field: 'update_time', title: '更新时间', width: 163, align: 'center'}
-        , {field: 'opt', title: '操作', width: 145,fixed: 'right', toolbar: '#barDemo', align: 'center'}
-      ]]
-      , page: true,
-    });
+      table.render({
+        elem: '#tableId'
+        , url: 'http://0.0.0.0:9501/Member/index'
+        , parseData: function (res) {
+          // loginStatusCheck(res);  //每次接口请求，进行登录状态检查
+          return {
+            code: 0,
+            msg: res.msg,
+            count: res.result.count,
+            data: res.result.data
+          };
+        }
+        , headers: {
+          token: $.cookie('admin')
+        }
+        , cols: [[  //设置表头
+          {field: 'id', title: 'ID', width: 45, align: 'center'}
+          , {field: 'name', title: '姓名', align: 'center'}
+          , {field: 'sex_txt', title: '性别', width: 60, align: 'center'}
+          , {field: 'phone', title: '手机号', width: 100, align: 'center'}
+          , {field: 'status_txt', title: '状态', width: 60, align: 'center'}
+          , {field: 'balance', title: '余额', align: 'center'}
+          , {field: 'member_level_txt', title: '会员等级', width: 100, align: 'center'}
+          , {field: 'know_space_txt', title: '了解渠道', width: 100, align: 'center'}
+          , {field: 'introduction', title: '备注', width: 60, align: 'center'}
+          , {field: 'create_staff', title: '创建人', align: 'center'}
+          , {field: 'update_staff', title: '更新人', align: 'center'}
+          , {field: 'create_time', title: '创建时间', width: 163, align: 'center'}
+          , {field: 'update_time', title: '更新时间', width: 163, align: 'center'}
+          , {field: 'opt', title: '操作', width: 145, fixed: 'right', toolbar: '#barDemo', align: 'center'}
+        ]]
+        , page: true,  //开启分页
+      });
 
     //-------监听行工具事件
     table.on('tool(test2)', function (obj) {  //注：tool是工具条事件名，test2 是 table 原始容器的属性 lay-filter="对应的值"
@@ -224,7 +226,7 @@
             type: "POST",
             url: "http://0.0.0.0:9501/member/delete",
             data: {id: data.id},
-            success: function (result) {  //删除会员成功
+          success: function (result) {  //删除会员成功
               layer.msg(result.msg);
               obj.del();  //删除当前行
             },
