--- a/View/home.html
+++ b/View/home.html
@@ -44,11 +44,11 @@
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a class="" href="javascript:;">服务选择</a>
+                    <a class="" href="javascript:;">消费收银</a>
                     <dl class="layui-nav-child">
-                        <dd><a class="menu-item" data-src="file:///Users/guoyuzhao/sites/lifadian/View/test2.html" href="javascript:;">服务类型</a></dd>
-                        <dd><a class="menu-item abc"  data-src="http://www.baidu.com" href="javascript:;">服务选择1</a></dd>
-                        <dd><a href="javascript:;">列表三</a></dd>
+                        <dd><a class="menu-item" data-src="/lifadian/View/test2.html" href="javascript:;">选择服务</a></dd>
+<!--                        <dd><a class="menu-item abc"  data-src="http://www.baidu.com" href="javascript:;">服务选择1</a></dd>-->
+<!--                        <dd><a href="javascript:;">列表三</a></dd>-->
                     </dl>
                 </li>
                 <li class="layui-nav-item">
