--- a/View/home.html
+++ b/View/home.html
@@ -46,7 +46,7 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">消费收银</a>
                     <dl class="layui-nav-child">
-                        <dd><a class="menu-item" data-src="/lifadian/View/test2.html" href="javascript:;">选择服务</a></dd>
+                        <dd><a class="menu-item" data-src="/lifadian/View/consume/selectService.html" href="javascript:;">选择服务</a></dd>
 <!--                        <dd><a class="menu-item abc"  data-src="http://www.baidu.com" href="javascript:;">服务选择1</a></dd>-->
 <!--                        <dd><a href="javascript:;">列表三</a></dd>-->
                     </dl>
@@ -68,8 +68,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">系统设置</a>
                     <dl class="layui-nav-child">
-                        <dd><a a class="menu-item"  data-src="/lifadian/View/service/addService.html" href="javascript:;">添加服务</a></dd>
-                        <dd><a a class="menu-item"  data-src="/lifadian/View/service/list.html" href="javascript:;">服务管理</a></dd>
+                        <dd><a a class="menu-item"  data-src="/lifadian/View/systemSetting/addService.html" href="javascript:;">服务类型</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="">数据统计</a></li>
